--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <h1>Jogo da Adivinhação</h1>
           <p>Adivinhe o número entre 0 e 10</p>
           <form>
-            <input type="text" maxlength="2"  size="2" required>
-            <button>Tentar</button>
+            <input id="inputNumber" type="text" maxlength="2"  size="2" required>
+            <button onclick="handleClick(event)">Tentar</button>
           </form>
         </div>
 
