logic and algorithm

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <div class="screen" >
+        <div class="screen1" >
           <h1>Jogo da Adivinhação</h1>
           <p>Adivinhe o número entre 0 e 10</p>
           <form>
@@ -23,7 +23,7 @@
 
         <div class="screen2 hide">
           <h2>Acertou em 3 tentativas!</h2>
-          <button>Jogar novamente</button>
+          <button onclick="newGameClick(event)">Jogar novamente</button>
         </div>
     </main>
     <script src="./main.js"></script>
