--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <h1>Jogo da Adivinhação</h1>
           <p>Adivinhe o número entre 0 e 10</p>
           <form>
-            <input id="inputNumber" type="text" maxlength="2"  size="2" required>
-            <button onclick="handleClick(event)">Tentar</button>
+            <input id="inputNumber" type="text" maxlength="2"  size="2" autofocus required>
+            <button id="btnTry"">Tentar</button>
           </form>
         </div>
 
         <div class="screen2 hide">
           <h2>Acertou em 3 tentativas!</h2>
-          <button onclick="newGameClick(event)">Jogar novamente</button>
+          <button id="btnReset">Jogar novamente</button>
         </div>
     </main>
     <script src="./main.js"></script>
